# python-rest-sdk

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
pypep/: __init__.py  client.py  compat.py
