[tool.poetry]
name = "python-rest-sdk"
version = "0.1.1"
description = ""
authors = ["xenups <xenups@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pycryptodome = "^3.21.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]